fix align

--- a/blocks/quotes/style.css
+++ b/blocks/quotes/style.css
@@ -11,6 +11,7 @@
 	margin: 2.4em 0;
 	padding: 1.6em;
 	border-radius: 3px;
+	text-align: inherit;
 }
 .wp-block-quotes-collection-quotes blockquote.quotescollection-quote p {
 	margin: 0 0 1.4em 0;
